examples/codegen/data.an
type T = a: I32, b: String

main () =
    t = T 1 "one"
    print "t = "
    print t.a
    print ", "
    println t.b

    s = Maybe.Some 2
    match s
    | Some x -> 
        print "s = "
        // The type variable from the literal `2` defaults in the outer scope 
        // so by this point we still get an impl error
        println x
    | None -> println "s = None"

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/data.an:16:9
// 15 |         // so by this point we still get an impl error
//    |         // error: Multiple matching implicits found for type Print _ required by parameter 2: print_bool, print_char, print_i8, print_i16, print_i32, ..
// 16 |         println x
//    |         ^^^^^^^
// 17 |     | None -> println "s = None"
// 
// Found 1 error and 0 warnings

